[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dendritecli"
description = "Manage the Dendrite API from your command line!"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Nexus", email = "packages@nexy7574.co.uk"}
]
dynamic = ["version", "dependencies"]

[project.urls]
Source = "https://github.com/nexy7574/dendritecli"
"Chat" = "https://matrix.to/#/@nex:nexy7574.co.uk"
Funding = "https://ko-fi.com/nexy7574"

[project.scripts]
dendritecli = "dendritecli.main:main"
dendrite-cli = "dendritecli.main:main"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
