[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dendritecli"
description = "Manage the Dendrite API from your command line!"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Nexus", email = "pip@nexy7574.co.uk"}
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "fastapi>=0.104.1",
    "pytest-dependency>=0.5.1",
    "ruff~=0.4"
]

[project.urls]
Source = "https://github.com/nexy7574/dendritecli"
"Chat" = "https://matrix.to/#/#ontopic:nexy74574.co.uk"
Funding = "https://ko-fi.com/nexy7574"

[project.scripts]
dendritecli = "dendritecli.main:main"
dendrite-cli = "dendritecli.main:main"

[tool.setuptools_scm]
version_file = "src/dendritecli/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.ruff]
exclude = [".git"]
target-version = "py39"
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.lint]
fixable = ["ALL"]
ignore =   ["F403", "F405"]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "I001",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
detect-same-package = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 120
